refactoried cpp demos

--- a/demos/cpp_demos/CMakeLists.txt
+++ b/demos/cpp_demos/CMakeLists.txt
@@ -1,7 +1,12 @@
 cmake_minimum_required(VERSION 3.12)
 
+project(cpp_demos)
+
 set(CMAKE_BUILD_TYPE Debug)
 
-add_executable(main main.cc)
+find_package(OpenSSL REQUIRED)
+find_library(secp256k1 libsecp256k1.a)
 
+add_executable(main main.cc test.cc htdf.cc)
+target_link_libraries(main libsecp256k1.a OpenSSL::SSL)
 
