--- a/demos/cpp_demos/CMakeLists.txt
+++ b/demos/cpp_demos/CMakeLists.txt
@@ -6,17 +6,15 @@ set(CMAKE_BUILD_TYPE Debug)
 
 find_library(secp256k1 libsecp256k1.a)
 
-add_executable(main main.cc 
-    test.cc 
+add_executable(test
+    htdf/test.cc 
     htdf/htdf.cc 
-    rand.cpp 
     htdf/crypto/sha256.cpp 
     htdf/crypto/ripemd160.cpp
-    # htdf/base64/base64.cpp
     htdf/bech32/bech32.cpp
     htdf/crypto/string.cpp
     htdf/crypto/strencodings.cpp
     )
 
-target_link_libraries(main libsecp256k1.a )
+target_link_libraries(test libsecp256k1.a )
 
