--- a/demos/cpp_demos/CMakeLists.txt
+++ b/demos/cpp_demos/CMakeLists.txt
@@ -22,6 +22,6 @@ target_link_libraries(test htdf libsecp256k1.a )
 # add_executable(htdf_address_generate htdf_address_generate.cpp )
 # target_link_libraries(htdf_address_generate htdf libsecp256k1.a )
 
-# add_executable(htdf_transfer htdf_transfer.cpp )
-# target_link_libraries(htdf_transfer htdf libsecp256k1.a )
+add_executable(htdf_transfer htdf_transfer.cpp )
+target_link_libraries(htdf_transfer htdf libsecp256k1.a )
 
