add airdrop tools for HRC20 batch transfer

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,4 @@ demos/java_demos/.settings
 
 demos/python_demos/.idea
 demos/python_demos/.vscode
-demos/python_demos/tools
+# demos/python_demos/tools/address.txt
